Added DbContext - We need to look at this in collaboration

--- a/ReservationAPI/appsettings.json
+++ b/ReservationAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "ReservationConnection": "Server=127.0.0.1,1433;Database=ReservationDatabase;User Id=sa;Password=iLuvBooks4ever<3;"
+  },
   "AllowedHosts": "*"
 }
