Fixed DB context so we can connect to DB

--- a/ReservationAPI/appsettings.json
+++ b/ReservationAPI/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "ReservationConnection": "Server=127.0.0.1,1433;Database=ReservationDatabase;User Id=sa;Password=iLuvBooks4ever<3;"
+    "ReservationConnection": "Server=database,1433;Database=ReservationDatabase;User Id=sa;Password=iLuvBooks4ever<3;TrustServerCertificate=True"
   },
   "AllowedHosts": "*"
 }
